--- a/README.rdoc
+++ b/README.rdoc
@@ -1,15 +1,16 @@
 = Run UglifyJS using Rhino
 
-== Erik Gustavson
-(C) Erik Gustavson, 2012
-License: Apache License, Version 2.0.
-http://www.apache.org/licenses/LICENSE-2.0.html
+Run UglifyJS using the Rhino javascript runtime and a minimal set of dependencies.
+
+* (C) Erik Gustavson, 2012
+* License: Apache License, Version 2.0.
+* http://www.apache.org/licenses/LICENSE-2.0.html
 
 == Credits
- * Mihai Bazon (mishoo) for Uglify - https://github.com/mishoo/UglifyJS 
- * Mozilla for the Rhino runtime - http://www.mozilla.org/rhino 
- * Alex Objelean (alexo) for wroj4j which inspired this project and showing how to shim CommonJS to fix module loading - https://github.com/alexo/wro4j
- * Steven Haines for a nice tutorial on how to use Rhino - http://www.informit.com/guides/content.aspx?g=java&seqNum=562
+* Mihai Bazon (mishoo) for Uglify - https://github.com/mishoo/UglifyJS 
+* Mozilla for the Rhino runtime - http://www.mozilla.org/rhino 
+* Alex Objelean (alexo) for wroj4j which inspired this project and showing how to shim CommonJS to fix module loading - https://github.com/alexo/wro4j
+* Steven Haines for a nice tutorial on how to use Rhino - http://www.informit.com/guides/content.aspx?g=java&seqNum=562
 
 
 
